...
        Text(username, color = LightGreyText, style = MaterialTheme.typography.bodyMedium, fontSize = 14.sp)
        Spacer(Modifier.height(10.dp))
        Text(name, style = MaterialTheme.typography.headlineLarge, fontSize = 20.sp, color = Color(0xFF000000))
        Spacer(Modifier.height(20.dp))

        Row(horizontalArrangement = Arrangement.SpaceEvenly, modifier = Modifier.fillMaxWidth().padding(horizontal = 85.dp)) {
            ProfileStat(followers.size.toString(), "Seguidores")
            ProfileStat(following.size.toString(), "Seguindo")
        }

        /*Spacer(Modifier.height(20.dp))
        Text(
            text = "Instituição: ${bio.ifBlank { "Sem bio definida." }}",
            style = MaterialTheme.typography.bodyMedium,
...
